fix nav spacing issue

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -49,8 +49,9 @@ li.dropdown {
 }
 
 #top-nav a {
-    // padding-left: 10px;
-    // padding-right: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin: 0;
     width: 100%;
 }
 
